--- a/index.html
+++ b/index.html
@@ -10,11 +10,19 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
     <style>
       .card-img-top {
         height: 400px;
         object-fit: cover;
         width: 100%;
+      }
+
+      .position-fixed {
+        right: 15px;
+        bottom: 15px;
+        box-shadow: 2px 2px 10px #00000082;
+        z-index: 1100;
       }
     </style>
   </head>
@@ -39,6 +47,54 @@
         </div>
       </div>
     </main>
+    <aside>
+      <button
+        class="btn btn-primary position-fixed rounded-circle"
+        type="button"
+        data-bs-toggle="offcanvas"
+        data-bs-target="#offcanvasRight"
+        aria-controls="offcanvasRight"
+      >
+        <i class="bi bi-cart4 fs-3"></i>
+        <span class="position-absolute top-0 start-75 translate-middle badge rounded-pill bg-danger d-none" id="cartAmount"> 1 </span>
+      </button>
+
+      <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+        <div class="offcanvas-header">
+          <h5 class="offcanvas-title" id="offcanvasRightLabel">Carrello</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body" id="offCart">
+          <!-- card -->
+
+          <!-- <div class="card mb-3">
+            <div class="card-body">
+              <div class="d-flex justify-content-between">
+                <div class="d-flex flex-row align-items-center">
+                  <div>
+                    <img
+                      src="https://images-na.ssl-images-amazon.com/images/I/91xrEMcvmQL.jpg"
+                      class="img-fluid rounded-3"
+                      alt="Shopping item"
+                      style="width: 100px"
+                    />
+                  </div>
+                  <div class="ms-3">
+                    <h5>Pandemic (The Extinction Files, Book 1)</h5>
+                  </div>
+                </div>
+                <div class="d-flex flex-row align-items-center">
+                  <div style="width: 80px">
+                    <h5 class="mb-0">7.81€</h5>
+                  </div>
+                  <a href="#!" style="color: #000000" onclick="myFunction()"><i class="bi bi-trash"></i></a>
+                </div>
+              </div>
+            </div>
+          </div> -->
+        </div>
+      </div>
+    </aside>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
