--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
       }
     </style>
   </head>
-  <body>
-    <h1 class="m-5 text-center">Library</h1>
+  <body class="d-none">
+    <h1 class="m-5 text-center">Book Shop</h1>
     <main>
       <div class="container">
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4" id="booksRow">
